chore(orgs): simplify
Signed-off-by: crosleyzack <crosleyzack@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 
-	Welcome! Would you like to play a game? 
-	
+	Welcome! Would you like to play a game?
+
 	─────▄██▀▀▀▀▀▀▀▀▀▀▀▀▀██▄─────
 	────███───────────────███────
 	───███─────────────────███───
@@ -28,7 +28,7 @@
 	───███▄──█────█────█──▄█████─
 	─────▀█████▄▄███▄▄█████▀─────
 	──────────█▄─────▄█──────────
-	
+
 	Enter the decrypted message as a URL, no spaces or caps.
 
 	IE https://crosleyzack.com/TheMessageHere
@@ -127,25 +127,13 @@
 				<span class="icon solid fa-users fa-lg">&nbsp;&nbsp;Organizations</span><br>
 				<section style="margin-bottom: 2em;">
 					<div class="row text-row">
-						<div class="col-3 col-12-small">
-							FIRST Robotics
-						</div>
-						<div class="col-7 col-12-small">
-							Served as Team Mentor assisting with training students to program.
-						</div>
-						<div class="col-2 col-12-small">
-							2012 - 2019
+						<div class="col-12 col-12-small">
+							Scouting America
 						</div>
 					</div>
 					<div class="row text-row">
-						<div class="col-3 col-12-small">
-							Boy Scouts of America
-						</div>
-						<div class="col-7 col-12-small">
-							Served as Advisor assisting youth to fulfill their leadership roles.
-						</div>
-						<div class="col-2 col-12-small">
-							2015 - 2018
+						<div class="col-12 col-12-small">
+							FIRST Robotics
 						</div>
 					</div>
 				</section>
@@ -165,7 +153,7 @@
 					one of how to think through problems and answer tough questions.
 				</p>
 				<!-- CV -->
-				<span class="icon solid fa-file fa-lg">&nbsp;&nbsp;Curriculum Vitae</span><br>
+				<span class="icon solid fa-file fa-lg">&nbsp;&nbsp;Resume</span><br>
 				<p>
 					Please visit my <a class="simple_link" href="https://github.com/crosleyzack/resume">resume github
 						respository.</a>
@@ -179,13 +167,19 @@
 						</div>
 						<div class="col-12">
 							It is not enough to simply write code, but to deliver working code to the user. This
-							requires CI/CD, containerization, microservices, performance monitoring, testing, and more. My
-							experience with Censys has given me a large amount of experience in these areas. I have constructed
-							data pipelines to ingest web data, transform that data into risks and vulnerabilities, and deliver
-							that data to the user via a web portal and APIs. I have built gRPC microservices to support 
-							individual features of the Censys product. I have defined containers for each of these microservices
-							and the associated Kubernetes charts. I have configured services with OpenTelemetry for observability
-							and alerting. Learning how to write code that is easy to read, performant, and secure is a continual
+							requires CI/CD, containerization, microservices, performance monitoring, testing, and more.
+							My
+							experience with Censys has given me a large amount of experience in these areas. I have
+							constructed
+							data pipelines to ingest web data, transform that data into risks and vulnerabilities, and
+							deliver
+							that data to the user via a web portal and APIs. I have built gRPC microservices to support
+							individual features of the Censys product. I have defined containers for each of these
+							microservices
+							and the associated Kubernetes charts. I have configured services with OpenTelemetry for
+							observability
+							and alerting. Learning how to write code that is easy to read, performant, and secure is a
+							continual
 							learning process, and I am always looking for ways to improve my capabilities.
 						</div>
 					</div>
@@ -195,18 +189,30 @@
 						</div>
 						<div class="col-12">
 							In graduate school, I worked with the <a href="https://sefcom.asu.edu/">Security Engineering
-							for Future Computing (SEFCOM)</a> lab for my thesis and significant coursework. In classes led by
-							SEFCOM faculty, I learned the techniques for binary, web, and network security. This included techniques
-							like Buffer Overflows, Format String exploits, Loop Overflows (Off-by-One exploits), Return Oriented
-							Programming, Spoofing (ARP, IP, TCP), Cross Site Scripting, and SQL Injection. These techniques were employed
-							with the Capture the Flag (CTF) team the pwndevils. Pwndevils was established by Shellphish alumni and worked
-							closely with the team, frequently attending DEFCOM CTF events with them. My research project for my thesis
-							was the application of inductive programming techniques to exploit generation, which enabled the learning of
-							basic expoits from examples in a CTF environment. This research is ongoing and pending future publication.
-							My role with Censys was development of tools like <a href="https://censys.com/platform">Platform</a> advantages
-							<a href="https://censys.com/solutions/attack-surface-management">Exposure Management</a> to enable users to
-							identify vulnerabilities in their internet facing devices. Using internet wide scan data, we identified
-							exposures and possible vulnerabilities and displayed them to the user via a web portal and APIs.
+								for Future Computing (SEFCOM)</a> lab for my thesis and significant coursework. In
+							classes led by
+							SEFCOM faculty, I learned the techniques for binary, web, and network security. This
+							included techniques
+							like Buffer Overflows, Format String exploits, Loop Overflows (Off-by-One exploits), Return
+							Oriented
+							Programming, Spoofing (ARP, IP, TCP), Cross Site Scripting, and SQL Injection. These
+							techniques were employed
+							with the Capture the Flag (CTF) team the pwndevils. Pwndevils was established by Shellphish
+							alumni and worked
+							closely with the team, frequently attending DEFCOM CTF events with them. My research project
+							for my thesis
+							was the application of inductive programming techniques to exploit generation, which enabled
+							the learning of
+							basic expoits from examples in a CTF environment. This research is ongoing and pending
+							future publication.
+							My role with Censys was development of tools like <a
+								href="https://censys.com/platform">Platform</a> advantages
+							<a href="https://censys.com/solutions/attack-surface-management">Exposure Management</a> to
+							enable users to
+							identify vulnerabilities in their internet facing devices. Using internet wide scan data, we
+							identified
+							exposures and possible vulnerabilities and displayed them to the user via a web portal and
+							APIs.
 						</div>
 					</div>
 					<div class="row text-row">
@@ -215,15 +221,24 @@
 						</div>
 						<div class="col-12">
 							I took multiple courses in artificial intelligence techniques, including heuristic searches,
-							classifiers, clustering, and reinforcement learning. My graduate work included the mathematical
-							foundations for algorithms like SVM, Naive Bayes, Logistic Regression, Locality Sensitive Hashing,
-							and Markov Decision Processes. My employment with the Navy involved the development of genetic
-							algorithms to optimize aircraft Tactics, Techniques, and Procedures (TTPs). In my career with the
-							Army, I developed a navigation system which generated a graph data structure from the terrain to
-							enable intelligent path identification via heuristic searches, like A* and Djikstra, and optimization
-							techniques like Ant Colony Optimization. I have also developed an architecture for Utility-driven
-							AI which is used to define adaptive behaviors. The methodology for my thesis research, inductive
-							programming, is an AI technique that uses Directed Acyclic Graph (DAG) intersections to learn
+							classifiers, clustering, and reinforcement learning. My graduate work included the
+							mathematical
+							foundations for algorithms like SVM, Naive Bayes, Logistic Regression, Locality Sensitive
+							Hashing,
+							and Markov Decision Processes. My employment with the Navy involved the development of
+							genetic
+							algorithms to optimize aircraft Tactics, Techniques, and Procedures (TTPs). In my career
+							with the
+							Army, I developed a navigation system which generated a graph data structure from the
+							terrain to
+							enable intelligent path identification via heuristic searches, like A* and Djikstra, and
+							optimization
+							techniques like Ant Colony Optimization. I have also developed an architecture for
+							Utility-driven
+							AI which is used to define adaptive behaviors. The methodology for my thesis research,
+							inductive
+							programming, is an AI technique that uses Directed Acyclic Graph (DAG) intersections to
+							learn
 							from examples.
 						</div>
 					</div>
